Adding some of my recent papers

--- a/References.bib
+++ b/References.bib
@@ -31,13 +31,6 @@
   pages   = {67--73},
 }
 
-@Electronic{Anonymous2012,
-  author    = {Anonymous},
-  year      = {2012},
-  title     = {History},
-  url       = {http://www.energy.idaho.gov/renewableenergy},
-}
-
 @Article{Anonymous1921,
   author  = {Anonymous},
   title   = {Cooling of hospitals},
@@ -2028,10 +2021,7 @@ The two borehole heat exchangers were analyzed over both long- and short-term pe
   abstract = { Purpose – This paper aims to present a framework for deriving analytical and semi‐numerical models for coupled conductive‐convective heat transfer processes in a borehole heat exchanger subjected to general initial and boundary conditions.Design/methodology/approach – The discrete Fourier transform and the spectral element method have been utilized for deriving two spectral models for a single U‐tube borehole heat exchanger in contact with a soil mass.Findings – Verification and numerical examples have shown that the developed models are accurate and computationally very efficient. It is illustrated that one spectral element is capable of producing results which are more accurate than those produced by 200 finite elements.Practical implications – The gained computational efficiency and accuracy will boost considerably the possibilities for more insight into geothermal analysis, which will improve the procedure for designing competitive energy extraction systems.Originality/value – The models are capable of calculating exactly the temperature distribution in all involved borehole heat exchanger components and their thermal interactions. },
   doi      = {10.1108/09615531011065566},
   eprint   = {https://doi.org/10.1108/09615531011065566},
-  url      = {
-        https://doi.org/10.1108/09615531011065566
-
-},
+  url      = {https://doi.org/10.1108/09615531011065566},
 }
 
 @Article{EskilsonClaesson1988,
@@ -2065,10 +2055,7 @@ The two borehole heat exchangers were analyzed over both long- and short-term pe
   doi       = {10.1080/19401493.2010.513739},
   eprint    = {http://dx.doi.org/10.1080/19401493.2010.513739},
   publisher = {Taylor \& Francis},
-  url       = {
-        http://dx.doi.org/10.1080/19401493.2010.513739
-
-},
+  url       = {http://dx.doi.org/10.1080/19401493.2010.513739},
 }
 
 @Article{NABI2012297,
@@ -2516,10 +2503,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   doi       = {10.1080/23744731.2016.1258371},
   eprint    = {https://doi.org/10.1080/23744731.2016.1258371},
   publisher = {Taylor \& Francis},
-  url       = {
-        https://doi.org/10.1080/23744731.2016.1258371
-
-},
+  url       = {https://doi.org/10.1080/23744731.2016.1258371},
 }
 
 @Article{XingSpitler2017b,
@@ -2534,10 +2518,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   doi       = {10.1080/23744731.2016.1262705},
   eprint    = {https://doi.org/10.1080/23744731.2016.1262705},
   publisher = {Taylor \& Francis},
-  url       = {
-        https://doi.org/10.1080/23744731.2016.1262705
-
-},
+  url       = {https://doi.org/10.1080/23744731.2016.1262705},
 }
 
 @Article{XingSpitler2017c,
@@ -2552,10 +2533,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   doi       = {10.1080/23744731.2016.1253978},
   eprint    = {https://doi.org/10.1080/23744731.2016.1253978},
   publisher = {Taylor \& Francis},
-  url       = {
-        https://doi.org/10.1080/23744731.2016.1253978
-
-},
+  url       = {https://doi.org/10.1080/23744731.2016.1253978},
 }
 
 @PhdThesis{Xing2014,
@@ -3222,10 +3200,7 @@ In 1996, a US federal agency began developing a new building energy simulation t
   eprint    = {https://doi.org/10.1080/10789669.2014.974478},
   publisher = {Taylor \& Francis},
   type      = {Journal Article},
-  url       = {
-        https://doi.org/10.1080/10789669.2014.974478
-
-},
+  url       = {https://doi.org/10.1080/10789669.2014.974478},
 }
 
 @Article{MONTAGUD20113618,
@@ -3257,7 +3232,32 @@ In 1996, a US federal agency began developing a new building energy simulation t
   url      = {http://www.sciencedirect.com/science/article/pii/S0960148118301095},
 }
 
-@Article{,
+@Article{MitchellSpitlerHansen2018,
+  author    = {Matt S. Mitchell and Garrett M. Hansen and Jeffrey D. Spitler},
+  title     = {Experimental development of natural convection heat transfer correlations for spiral-helical surface water heat exchangers ({1385-RP})},
+  journal   = {Science and Technology for the Built Environment},
+  year      = {2018},
+  volume    = {24},
+  number    = {7},
+  pages     = {714--725},
+  abstract  = { Surface water heat pump systems utilize surface water bodies, such as lakes, reservoirs, and rivers, as heat sources and heat sinks. Closed-loop surface water heat pumps use submerged heat exchangers to extract or reject heat from the surface water body. Heat transfer between the heat exchanger and the lake is generally governed by buoyancy driven natural convection. One form of surface water heat exchanger is the spiral-helical heat exchanger, which is usually fabricated from high-density polyethylene tubing. Though the exterior convective resistance is an important part of the design calculation, convection correlations suitable for spiral-helical surface water heat exchangers are not available. In the current article, the authors cover an experimental study involving heat rejection experiments and heat extraction experiments on nine different spiral-helical configurations with three different high-density polyethylene tube sizes. Standard high-density polyethylene and thermally enhanced high-density polyethylene heat exchangers were also tested and compared. Convection correlations for spiral-helical heat exchangers were developed for heat extraction and heat rejection conditions. Heat transfer rate predicted with the correlations is compared against experimental data. },
+  doi       = {10.1080/23744731.2017.1365764},
+  eprint    = {https://doi.org/10.1080/23744731.2017.1365764},
+  publisher = {Taylor \& Francis},
+  url       = {https://doi.org/10.1080/23744731.2017.1365764},
+}
+
+@Article{FONTANINI201869,
+  author   = {Anthony D. Fontanini and Jose L. Castro Aguilar and Matt S. Mitchell and Jan Kosny and Noel Merket and Jason W. DeGraw and Edwin Lee},
+  title    = {Predicting the performance of radiant technologies in attics: {Reducing} the discrepancies between attic specific and whole-building energy models},
+  journal  = {Energy and Buildings},
+  year     = {2018},
+  volume   = {169},
+  pages    = {69--83},
+  issn     = {0378-7788},
+  abstract = {The use of radiant technology in attics aims to reduce the radiation component of heat transfer between the attic floor and roof decks, gables, and eaves. Recently, it has been shown that EnergyPlus underestimates the savings using radiant technologies in attic spaces. The aim of this study is to understand why EnergyPlus underestimates the performance of radiant technologies and provide a solution strategy that works within the current capabilities of EnergyPlus. The analysis uses three attic energy models as a baseline for comparison for EnergyPlus. Potential reasons for the discrepancies between the attic specific energy models and EnergyPlus are isolated and individually tested. A solution strategy is proposed using the Energy Management System (EMS) capabilities within EnergyPlus. This solution strategy produces similar results to the other attic specific energy models. This paper shows that the current capabilities of EnergyPlus are sufficient to simulate radiant technologies in attics. The methodology showcased in this paper serves as a guide for engineers and researchers who would like to predict the performance radiant technology in attics using the whole building energy software, EnergyPlus.},
+  doi      = {https://doi.org/10.1016/j.enbuild.2018.03.054},
+  url      = {http://www.sciencedirect.com/science/article/pii/S0378778817337544},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
